Launchpad automatic translations update.

--- a/po/pl.po
+++ b/po/pl.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-04-22 17:25+0200\n"
-"PO-Revision-Date: 2012-05-28 16:47+0000\n"
+"PO-Revision-Date: 2012-05-29 21:18+0000\n"
 "Last-Translator: btomasz <btomasz92@gmail.com>\n"
 "Language-Team: Polish <ponton@jabster.pl>\n"
 "MIME-Version: 1.0\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2012-05-29 04:46+0000\n"
+"X-Launchpad-Export-Date: 2012-05-30 05:22+0000\n"
 "X-Generator: Launchpad (build 15316)\n"
 
 #: GTG/plugins/notification_area/notification_area.py:123
@@ -509,6 +509,17 @@ msgid ""
 "\n"
 "Other stuff you should read:"
 msgstr ""
+"Jeśli już przeczytałeś(-aś) powyższe podzadanie, oznacz je jako wykonane. "
+"Jeśli nie chcesz wykonywać zadania, oznacz je jako odwołane. Zadania "
+"oznaczone jako wykonane i odwołane są przechowywane na panelu zadań "
+"zamkniętych. Jest on domyślnie ukryty, ale możesz go wyświetlić używając "
+"menu Widok.\n"
+"    \n"
+"Jeśli zamkniesz to zadanie (wykonując je lub odwołując), zostaną zamknięte "
+"również wszystkie jego podzadania. GTG zakłada, że jeśli kończysz dane "
+"zadanie, to nie potrzebujesz już wykonywać przypisanych mu podzadań.\n"
+"\n"
+"Inne rzeczy, które warto przeczytać:"
 
 #: GTG/core/firstrun_tasks.py:29
 msgid ""
@@ -518,6 +529,11 @@ msgid ""
 "\n"
 "Thank you for trying out GTG :-)"
 msgstr ""
+"Mamy nadzieję, że GTG Ci się spodoba. Prosimy o zgłaszanie błędów i pomysłów "
+"na usprawnienia używając:\n"
+"    https://bugs.launchpad.net/gtg\n"
+"\n"
+"Dziękujemy za wypróbowanie GTG :-)"
 
 #: GTG/core/firstrun_tasks.py:37
 msgid "Learn how to use subtasks"
@@ -538,6 +554,20 @@ msgid ""
 "after its parent's due date and when you mark a parent task as done, its "
 "subtasks will also be marked as done."
 msgstr ""
+"&quot;Podzadanie&quot; jest czymś, co musisz zrobić wcześniej, aby wykonać "
+"zadanie. Aby dodać zadanie podrzędne, w opisie zadania (to okno) rozpocznij "
+"linię od &quot;-&quot;, napisz tytuł podzadania i wciśnij Enter. Możesz to "
+"tutaj wypróbować.\n"
+"    \n"
+"Możesz też użyć przycisku &quot;Dodaj nowe zadanie podrzędne&quot;.\n"
+"\n"
+"Możesz reorganizować zadania i podzadania poprzez ich przeciąganie na liście "
+"zadań.\n"
+"\n"
+"Zadania podrzędne posiadają kilka zasad: np. termin wykonania podzadania nie "
+"może być późniejszy niż jego zadania nadrzędnego oraz jeśli oznaczysz "
+"zadanie jako wykonane, to jego podzadania również zostaną oznaczone jako "
+"wykonane."
 
 #: GTG/core/firstrun_tasks.py:49
 msgid "Learn how to use tags"
@@ -572,6 +602,34 @@ msgid ""
 "subtask). Of course, you can modify at any time the tags of this particular "
 "subtask. It will never be changed by the parent."
 msgstr ""
+"Znacznik jest słowem poprzedzonym znakiem &quot;@&quot;.\n"
+"\n"
+"Spróbuj tutaj wpisać słowo rozpoczynające się od @:\n"
+"\n"
+"Jak widzisz, podświetla się na żółto - jest znacznikiem.\n"
+"\n"
+"Znaczniki są przydatne do sortowania zadań. Z pomocą menu Widok możesz "
+"włączyć panel wyświetlający wszystkie znaczniki użyte w zadaniach. Klikając "
+"na jeden z nich możesz wyświetlić listę zadań skojarzonych z danym "
+"znacznikiem. Możesz mieć dowolną liczbę tagów, ale warto dbać o ich dobrą "
+"organizację.\n"
+"\n"
+"Możesz przeciągnąć znacznik na inny aby utworzyć \"podznacznik\". Na "
+"przykład, jeśli przeciągniesz znacznik @do_zapłacenia na znacznik "
+"@pieniądze, każde zadanie oznaczone @do_zapłacenia pokaże się również w "
+"widoku znacznika @pieniądze (ale znacznik @pieniądze nie jest wtedy dodawany "
+"do zadania).\n"
+"\n"
+"Klikając prawym przyciskiem myszy na znacznik, możesz ustawić jego kolor. "
+"Pozwala to pokolorować listę zadań i łatwiej oceniać przynależność zadań do "
+"znaczników.\n"
+"\n"
+"Nowe znaczniki są dodawane tylko do bieżącego zadania, nie przechodzą na "
+"jego zadania podrzędne, ale gdy utworzysz nowe podzadanie, otrzyma ono "
+"domyślnie znaczniki zadania nadrzędnego (będzie to również mieć miejsce "
+"jeśli dodasz znacznik zaraz po utworzeniu podzadania). Oczywiście możesz "
+"dowolnie modyfikować znaczniki zadań podrzędnych, nigdy nie będą one "
+"zmienione przez zadanie nadrzędne."
 
 #: GTG/core/firstrun_tasks.py:67
 msgid "Learn how to use the Workview"
@@ -597,6 +655,24 @@ msgid ""
 "if you have a tag like &quot;someday&quot; that you use for tasks you would "
 "like to do but are not particularly urgent."
 msgstr ""
+"Jeśli wciśniesz przycisk &quot;Widok roboczy&quot;, wyświetlane będą tylko "
+"najodpowiedniejsze zadania.\n"
+"\n"
+"Jakie to zadania? Przede wszystkim, to zadania, które możesz zrobić od razu, "
+"teraz.\n"
+"\n"
+"To zadania, które się rozpoczęły - minęła data startu.\n"
+"\n"
+"To zadania, których zadania podrzędne zostały wykonane.\n"
+"\n"
+"Krótko  mówiąc, widok roboczy pokaże zadania, które powinieneś(-aś) teraz "
+"zrobić..\n"
+"\n"
+"Jeśli używasz znaczników, możesz kliknąć prawym przyciskiem myszy na "
+"znacznik w panelu bocznym i ukryć zadania powiązane z nim. Może to być "
+"bardzo przydatne jeśli masz znacznik typu &quot;kiedyś&quot;, którego "
+"używasz do oznaczenia zadań które chciałbyś(-aś) wykonać, ale jeszcze nie "
+"teraz."
 
 #: GTG/core/firstrun_tasks.py:83
 msgid "Learn how to use Plugins"
@@ -1482,7 +1558,7 @@ msgstr "Oznacz to zadanie jako do zrobienia"
 
 #: GTG/gtk/editor/__init__.py:38
 msgid "Mark this task as not to be done anymore"
-msgstr "Oznacz to zadanie jako nie do zrobienia"
+msgstr "Oznacz to zadanie jako odwołane"
 
 #: GTG/gtk/editor/__init__.py:40
 msgid "Permanently remove this task"
