Launchpad automatic translations update.

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -7,15 +7,15 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-04-22 17:25+0200\n"
-"PO-Revision-Date: 2012-06-26 21:43+0000\n"
-"Last-Translator: Rafael Neri <Unknown>\n"
+"PO-Revision-Date: 2012-06-29 13:36+0000\n"
+"Last-Translator: AdirKuhn <adirkuhn@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <gnome-pt_br-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Launchpad-Export-Date: 2012-06-27 05:29+0000\n"
-"X-Generator: Launchpad (build 15482)\n"
+"X-Launchpad-Export-Date: 2012-06-30 05:09+0000\n"
+"X-Generator: Launchpad (build 15520)\n"
 "Language: pt_BR\n"
 
 #: GTG/plugins/notification_area/notification_area.py:123
@@ -513,6 +513,16 @@ msgid ""
 "\n"
 "Other stuff you should read:"
 msgstr ""
+"Uma vez que você leu sobre a subtarefa, marque ela como pronta. Se você não "
+"precisa fazer a tarefa, marque ela como dispensada. Tarefas que você marcou "
+"como prontas ou dispensadas são armazenadas no painel de tarefas fechadas "
+"que por padrão é oculto, mas pode ser facilmente habilitado no menu exibir.\n"
+"    \n"
+"Se você escolher fechar esta tarefa atual, as subtarefas serão fechadas "
+"automaticamente também. GTG considera que se você completou uma dada tarefa, "
+"você não precisa mais das subtarefas.\n"
+"\n"
+"Outras coisas que você deveria ler:"
 
 #: GTG/core/firstrun_tasks.py:29
 msgid ""
