Update CHANGELOG, AUTHORS, info.py

--- a/AUTHORS
+++ b/AUTHORS
@@ -104,3 +104,4 @@ For 0.3:
 * Marta Maria Casetti <mmcasetti@gmail.com>
 * Song Yangyu <flyfy1@gmail.com>
 * Saurabh Anand <saurabhanandiit@gmail.com>
+* Antonio Roquentin <https://launchpad.net/~antonio-roquentin> (no email provided)
