--- a/CHANGELOG
+++ b/CHANGELOG
@@ -22,6 +22,7 @@
     * Added an option to import local (development) version of liblarch instead of system installed one
     * Fix for bug #995740: (no title task) through quickadd bar, by Nimit Shah
     * New tag editor
+    * Fix for bug #1001012: Notification area icon should change color when there are urgent tasks, by Antonio Roquentin
 
 2012-02-13 Getting Things GNOME! 0.2.9
     * Big refractorization of code, now using liblarch
