--- a/CHANGELOG
+++ b/CHANGELOG
@@ -31,6 +31,7 @@
     * It is not possible to add another instance of local file synchronization service
     * Fixes for bugs #906516, #1002160 (task urgency color plugin), by Wolter Hellmund
     * Fix for bug #1001012: Notification area icon should change color when there are urgent tasks, by Antonio Roquentin
+    * Saner implementation of set_due_date
 
 2012-02-13 Getting Things GNOME! 0.2.9
     * Big refractorization of code, now using liblarch
